--- a/stuff.html
+++ b/stuff.html
@@ -9,7 +9,7 @@
     <p> </p>
     <h1 style="    text-align: center;"><span style="font-family: Purisa;">codingkid.ninja</span></h1>
     <p style="text-align: center;"><span style="font-family: Purisa;"><a href="index.html">Home</a>
-        | Stuff | <a href="https://github.com/Merlin04">Github</a> | <a href="file:///home/benjamin/codingkid-bluegriffon/Hello%20World%21.html">Test
+        | Stuff | <a href="https://github.com/Merlin04">Github</a> | <a href="Hello%20World%21.html">Test
           page</a></span><span style="font-family: Purisa;"> | Forums (beta)</span></p>
     <span style="font-family: Purisa;">
     </span>
