Update 1 - bug fixes
Change font to a Google web font, add content, and remove not needed stuff.

--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <title>Main | codingkid.ninja</title>
+    <link href="https://fonts.googleapis.com/css?family=Dekko%20,cursive" rel="stylesheet">
   </head>
-  <body><span style="font-family: Purisa;"> </span>
+  <body><span style="font-family: Dekko, cursive;"> </span>
     <p> </p>
-    <h1 style="    text-align: center;"><span style="font-family: Purisa;">codingkid.ninja</span></h1>
-    <p style="text-align: center;"><span style="font-family: Purisa;">Home | <a
-          href="stuff.html">Stuff</a> | <a href="https://github.com/Merlin04">Github</a>
-        | <a href="Hello%20World%21.html">Test page</a> | Forums (beta)<br>
-      </span></p>
-    <span style="font-family: Purisa;">
-    </span>
-    <p><span style="font-family: Purisa;"><br>
+    <span style="font-family: Dekko, cursive;"> </span>
+    <h1 style="    text-align: center;"><span style="font-family: Dekko, cursive;">codingkid.ninja</span></h1>
+    <span style="font-family: Dekko, cursive;"> </span>
+    <p style="text-align: center;"><span style="font-family: Dekko, cursive;">Home
+        | <a href="stuff.html">Stuff</a> | <a href="https://github.com/Merlin04">Github</a>
+        | <a href="Hello%20World%21.html">Test page</a> | <a href="http://codingkid.weebly.com">Old
+          site</a><br>
       </span> </p>
-    <span style="font-family: Purisa;">
-    </span>
-    <p><span style="font-family: Purisa;"><br>
+    <span style="font-family: Dekko, cursive;"> </span>
+    <p><span style="font-family: Dekko, cursive;"><br>
+      </span> </p>
+    <span style="font-family: Dekko, cursive;"> </span>
+    <p><span style="font-family: Dekko, cursive;"><br>
         This is a work in progress site to replace <a href="http://codingkid.weebly.com">codingkid.weebly.com</a>.
-        For optimal viewing experience, install the "Purisa" font.</span></p>
-    <span style="font-family: Purisa;"></span>
+        <br>
+      </span></p>
+    <span style="font-family: Dekko, cursive;"> </span>
   </body>
 </html>
