--- a/stuff.html
+++ b/stuff.html
@@ -3,24 +3,31 @@
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <title>Stuff | codingkid.ninja</title>
+    <link href="https://fonts.googleapis.com/css?family=Dekko%20,cursive" rel="stylesheet">
   </head>
   <body>
-    <p><span style="font-family: Purisa;"> </span></p>
+    <p><span style="font-family: Dekko, cursive;"> </span></p>
     <p> </p>
-    <h1 style="    text-align: center;"><span style="font-family: Purisa;">codingkid.ninja</span></h1>
-    <p style="text-align: center;"><span style="font-family: Purisa;"><a href="index.html">Home</a>
-        | Stuff | <a href="https://github.com/Merlin04">Github</a> | <a href="Hello%20World%21.html">Test
-          page</a></span><span style="font-family: Purisa;"> | Forums (beta)</span></p>
-    <span style="font-family: Purisa;">
-    </span>
-    <p><span style="font-family: Purisa;"><br>
+    <h1 style="    text-align: center;"><span style="font-family: Dekko, cursive;">codingkid.ninja</span></h1>
+    <p style="text-align: center;"><span style="font-family: Dekko, cursive;"><a
+          href="index.html">Home</a> | Stuff | <a href="https://github.com/Merlin04">Github</a>
+        | <a href="Hello%20World%21.html">Test page</a></span><span style="font-family: Dekko, cursive;">
+      </span><span style="font-family: Dekko, cursive;">| <a href="http://codingkid.weebly.com">Old
+          site</a></span></p>
+    <span style="font-family: Dekko, cursive;"> </span>
+    <p><span style="font-family: Dekko, cursive;"><br>
       </span> </p>
-    <span style="font-family: Purisa;">
-    </span>
-    <p><span style="font-family: Purisa;">My stuff. No idea what I'll put here,
-        probably some information on my code. <br>
+    <span style="font-family: Dekko, cursive;"> </span>
+    <p><span style="font-family: Dekko, cursive;">My stuff. No idea what I'll
+        put here, probably some information on my code. <br>
       </span></p>
-    <p><span style="font-family: Purisa;"></span><span style="font-family: Purisa;"></span>
+    <a href="usbchuck.html"><img style="width: 171px; height: 128px;" title="USBChuck"
+        alt="USBChuck logo. " src="usbchuck.png"></a><span style="font-family: Dekko, cursive;"><br>
+      USBChuck is a USB Wii Nunchuk. See more <a href="usbchuck.html">here</a>.
+      <br>
+    </span>
+    <p><span style="font-family: Dekko, cursive;"></span><span style="font-family: Dekko, cursive;"></span>
     </p>
+    
   </body>
 </html>
