Fix the third occurence of the mistake

--- a/usbchuck.html
+++ b/usbchuck.html
@@ -11,9 +11,9 @@
     <h1 style="    text-align: center;"><span style="font-family: Dekko, cursive;">codingkid.ninja</span></h1>
     <span style="font-family: Dekko, cursive;"> </span>
     <p style="text-align: center;"><span style="font-family: Dekko, cursive;"><a
-          href="index.html">Home</a> | <a href="file:///home/benjamin/codingkid-bluegriffon/stuff.html">Stuff</a>
-        | <a href="https://github.com/Merlin04">Github</a> | <a href="Hello%20World%21.html">Test
-          page</a> | <a href="http://codingkid.weebly.com">Old site</a><br>
+          href="index.html">Home</a> | <a href="stuff.html">Stuff</a> | <a href="https://github.com/Merlin04">Github</a>
+        | <a href="Hello%20World%21.html">Test page</a> | <a href="http://codingkid.weebly.com">Old
+          site</a><br>
       </span> </p>
     <span style="font-family: Dekko, cursive;"> </span>
     <p><span style="font-family: Dekko, cursive;"><br>
