Use better font

--- a/index.html
+++ b/index.html
@@ -3,26 +3,27 @@
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <title>Main | codingkid.ninja</title>
-    <link href="https://fonts.googleapis.com/css?family=Dekko%20,cursive" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
   </head>
-  <body><span style="font-family: Dekko, cursive;"> </span>
+  <body><span style="font-family: Comfortaa,Verdana;"> </span>
     <p> </p>
-    <span style="font-family: Dekko, cursive;"> </span>
-    <h1 style="    text-align: center;"><span style="font-family: Dekko, cursive;">codingkid.ninja</span></h1>
-    <span style="font-family: Dekko, cursive;"> </span>
-    <p style="text-align: center;"><span style="font-family: Dekko, cursive;">Home
-        | <a href="stuff.html">Stuff</a> | <a href="https://github.com/Merlin04">Github</a>
+    <span style="font-family: Comfortaa,Verdana;"> </span>
+    <h1 style="    text-align: center;"><span style="font-family: Comfortaa,Verdana;">codingkid.ninja</span></h1>
+    <span style="font-family: Comfortaa,Verdana;"> </span>
+    <p style="text-align: center;"><span style="font-family: Comfortaa,Verdana;&gt;Home | &lt;a
+          href=" stuff.html"="">Stuff | <a href="https://github.com/Merlin04">Github</a>
         | <a href="Hello%20World%21.html">Test page</a> | <a href="http://codingkid.weebly.com">Old
           site</a><br>
       </span> </p>
-    <span style="font-family: Dekko, cursive;"> </span>
-    <p><span style="font-family: Dekko, cursive;"><br>
+    <span style="font-family: Comfortaa,Verdana;"> </span>
+    <p><span style="font-family: Comfortaa,Verdana;"><br>
       </span> </p>
-    <span style="font-family: Dekko, cursive;"> </span>
-    <p><span style="font-family: Dekko, cursive;"><br>
+    <span style="font-family: Comfortaa,Verdana;"> </span>
+    <p><span style="font-family: Comfortaa,Verdana;"><br>
         This is a work in progress site to replace <a href="http://codingkid.weebly.com">codingkid.weebly.com</a>.
-        <br>
       </span></p>
-    <span style="font-family: Dekko, cursive;"> </span>
+    <br>
+    <p><span style="font-family: Comfortaa,Verdana;"></span></p>
+    <span style="font-family: Comfortaa,Verdana;"> </span>
   </body>
 </html>
