--- a/usbchuck.html
+++ b/usbchuck.html
@@ -3,23 +3,23 @@
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <title>USBChuck | codingkid.ninja</title>
-    <link href="https://fonts.googleapis.com/css?family=Dekko%20,cursive" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
   </head>
-  <body><span style="font-family: Dekko, cursive;"> </span>
+  <body><span style="font-family: Comfortaa, Verdana;"> </span>
     <p> </p>
     <p> </p>
-    <h1 style="    text-align: center;"><span style="font-family: Dekko, cursive;">codingkid.ninja</span></h1>
-    <span style="font-family: Dekko, cursive;"> </span>
-    <p style="text-align: center;"><span style="font-family: Dekko, cursive;"><a
+    <h1 style="    text-align: center;"><span style="font-family: Comfortaa, Verdana;">codingkid.ninja</span></h1>
+    <span style="font-family: Comfortaa, Verdana;"> </span>
+    <p style="text-align: center;"><span style="font-family: Comfortaa, Verdana;"><a
           href="index.html">Home</a> | <a href="stuff.html">Stuff</a> | <a href="https://github.com/Merlin04">Github</a>
         | <a href="Hello%20World%21.html">Test page</a> | <a href="http://codingkid.weebly.com">Old
           site</a><br>
       </span> </p>
-    <span style="font-family: Dekko, cursive;"> </span>
-    <p><span style="font-family: Dekko, cursive;"><br>
+    <span style="font-family: Comfortaa, Verdana;"> </span>
+    <p><span style="font-family: Comfortaa, Verdana;"><br>
       </span> </p>
-    <span style="font-family: Dekko, cursive;"> </span>
-    <p><span style="font-family: Dekko, cursive;"><br>
+    <span style="font-family: Comfortaa, Verdana;"> </span>
+    <p><span style="font-family: Comfortaa, Verdana;"><br>
         I recently got the idea to make a smaller iTapStick. The iTapStick is a
         Wii Nunchuck that is a mouse using USB: <a class="postlink" href="https://learn.adafruit.com/nunchuket-kung-fu-pc-video-game-fighting-stick/play?view=all">https://learn.adafruit.com/nunchuket-ku
           ... y?view=all</a><br>
@@ -30,24 +30,24 @@
       </span></p>
     <div class="inline-attachment">
       <dl class="file">
-        <dt class="attach-image"><span style="font-family: Dekko, cursive;"><img
+        <dt class="attach-image"><span style="font-family: Comfortaa, Verdana;"><img
               src="http://www.sudomod.com/forum/download/file.php?id=1778"></span></dt>
       </dl>
     </div>
-    <span style="font-family: Dekko, cursive;"><br>
+    <span style="font-family: Comfortaa, Verdana;"><br>
       The Nunchuck is suprisingly empty, and has just enough space for a
       Trinket...<br>
       <br>
     </span>
     <div class="inline-attachment">
       <dl class="file">
-        <dt class="attach-image"><span style="font-family: Dekko, cursive;"><img
+        <dt class="attach-image"><span style="font-family: Comfortaa, Verdana;"><img
               style="width: 659px; height: 491px;" src="http://www.sudomod.com/forum/download/file.php?id=1779"></span><span
-            style="font-family: Dekko, cursive;"></span><br>
-          <span style="font-family: Dekko, cursive;"></span></dt>
+            style="font-family: Comfortaa, Verdana;"></span><br>
+          <span style="font-family: Comfortaa, Verdana;"></span></dt>
       </dl>
     </div>
-    <span style="font-family: Dekko, cursive;"><br>
+    <span style="font-family: Comfortaa, Verdana;"><br>
       However, there is lots of support structure that gets in the way of the
       Trinket. I will have time to cut the support structure in a few days. <br>
       <br>
@@ -69,7 +69,7 @@
       black wire and left it in the Nunchuck.<br>
       <br>
     </span><br>
-    <span style="font-family: Dekko, cursive;"><img style="width: 560px; height: 417px;"
+    <span style="font-family: Comfortaa, Verdana;"><img style="width: 560px; height: 417px;"
         src="http://www.sudomod.com/forum/download/file.php?id=1818"><br>
       Now time for the code!<br>
       I have been modifing the iTapStick code from Adafruit. So far I have made
@@ -79,7 +79,7 @@
     <blockquote>I'm still working on finding a code box to put the code in. :-(<br>
       If you know of one, please answer my Stack Exchange question <a href="http://softwarerecs.stackexchange.com/questions/38194/a-code-box-for-html">here</a>.
     </blockquote>
-    <span style="font-family: Dekko, cursive;"><br>
+    <span style="font-family: Comfortaa, Verdana;"><br>
     </span>
   </body>
 </html>
