Add a new project

--- a/stuff.html
+++ b/stuff.html
@@ -18,13 +18,17 @@
     <p><span style="font-family: Comfortaa, Verdana;"><br>
       </span> </p>
     <span style="font-family: Comfortaa, Verdana;"> </span>
-    <p><span style="font-family: Comfortaa, Verdana;">My stuff. No idea what
-        I'll put here, probably some information on my code. <br>
+    <p><span style="font-family: Comfortaa, Verdana;">My stuff. <br>
       </span></p>
-    <a href="usbchuck.html"><img style="width: 171px; height: 128px;" title="USBChuck"
+    <a href="usbchuck.html"><img style="width: 299px; height: 224px;" title="USBChuck"
         alt="USBChuck logo. " src="usbchuck.png"></a><span style="font-family: Comfortaa, Verdana;"><br>
       USBChuck is a USB Wii Nunchuk. See more <a href="usbchuck.html">here</a>.
       <br>
+      <br>
+      <img style="width: 297px; height: 222px;" title="iSec Capture" alt="iSec Capture Logo"
+        src="isec.png"><br>
+      (ARTICLE IN BETA) iSec Capture is a Raspberry Pi-powered IoT security
+      camera. See more <a href="isec.html">here</a>. <br>
     </span>
     <p><span style="font-family: Comfortaa, Verdana;"></span><span style="font-family: Comfortaa, Verdana;"></span>
     </p>
