--- a/stuff.html
+++ b/stuff.html
@@ -25,8 +25,8 @@
       USBChuck is a USB Wii Nunchuk. See more <a href="usbchuck.html">here</a>.
       <br>
       <br>
-      <img style="width: 297px; height: 222px;" title="iSec Capture" alt="iSec Capture Logo"
-        src="isec.png"><br>
+      <a href="isec.html"><img style="width: 297px; height: 222px;" title="iSec Capture"
+          alt="iSec Capture Logo" src="isec.png"></a><br>
       (ARTICLE IN BETA) iSec Capture is a Raspberry Pi-powered IoT security
       camera. See more <a href="isec.html">here</a>. <br>
     </span>
