Update 2 - make website look better

--- a/index.html
+++ b/index.html
@@ -3,28 +3,40 @@
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <title>Main | codingkid.ninja</title>
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+    <style>
+      h1 {
+        background-color: lightskyblue;
+        padding-bottom: 20px;
+        padding-top: 20px;
+        margin: 0;
+      }
+      h3 {
+        background-image: url("menubg.png");
+        padding-bottom: 7px;
+        padding-top: 7px;
+        margin: 0;
+      }
+      body {
+             background-image: url("bg.png");
+      }
+    </style>
   </head>
-  <body><span style="font-family: Comfortaa, Verdana;"> </span>
-    <p> </p>
-    <span style="font-family: Comfortaa, Verdana;"> </span>
+  <body> <span style="font-family: Comfortaa, Verdana;"> </span>
     <h1 style="    text-align: center;"><span style="font-family: Comfortaa, Verdana;">codingkid.ninja</span></h1>
     <span style="font-family: Dekko, cursive;"> </span>
-    <p style="text-align: center;"><span style="font-family: Comfortaa, Verdana;">Home | <a
-          href="stuff.html">Stuff</a> | <a href="https://github.com/Merlin04">Github</a>
+    <h3 style="           text-align: center;"><span style="font-family: Comfortaa, Verdana;">Home
+        | <a href="stuff.html">Stuff</a> | <a href="https://github.com/Merlin04">Github</a>
         | <a href="Hello%20World%21.html">Test page</a> | <a href="http://codingkid.weebly.com">Old
           site</a><br>
-      </span> </p>
-    <span style="font-family: Comfortaa, Verdana;"> </span>
-    <p><span style="font-family: Comfortaa, Verdana;"><br>
-      </span> </p>
-    <span style="font-family: Comfortaa, Verdana;"> </span>
+      </span> </h3>
+    <span style="font-family: Comfortaa, Verdana;"> </span> <span style="font-family: Comfortaa, Verdana;">
+    </span>
     <p><span style="font-family: Comfortaa, Verdana;"><br>
         This is a work in progress site to replace <a href="http://codingkid.weebly.com">codingkid.weebly.com</a>.
       </span></p>
     <br>
     <p><span style="font-family: Comfortaa, Verdana;"></span></p>
     <span style="font-family: Comfortaa, Verdana;"> </span>
-    
   </body>
 </html>
