--- a/isec.html
+++ b/isec.html
@@ -4,17 +4,32 @@
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <title>iSec Capture | codingkid.ninja</title>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+    <style>
+      h1 {
+        background-color: lightskyblue;
+        padding-bottom: 20px;
+        padding-top: 20px;
+        margin: 0;
+      }
+      h3 {
+        background-image: url("menubg.png");
+        padding-bottom: 7px;
+        padding-top: 7px;
+        margin: 0;
+      }
+      body {
+             background-image: url("bg.png");
+      }
+    </style>
   </head>
-  <body><span style="font-family: Comfortaa, Verdana;"> </span>
-    <p> </p>
     <span style="font-family: Comfortaa, Verdana;"> </span>
     <h1 style="    text-align: center;"><span style="font-family: Comfortaa, Verdana;">codingkid.ninja</span></h1>
     <span style="font-family: Dekko, cursive;"> </span>
-    <p style="text-align: center;"><span style="font-family: Comfortaa, Verdana;"><a
+    <h3 style=" text-align: center;"><span style="font-family: Comfortaa, Verdana;"><a
           href="index.html">Home</a> | <a href="stuff.html">Stuff</a> | <a href="https://github.com/Merlin04">Github</a>
         | <a href="Hello%20World%21.html">Test page</a> | <a href="http://codingkid.weebly.com">Old
           site</a><br>
-      </span> </p>
+      </span> </h3>
     <span style="font-family: Comfortaa, Verdana;"> </span>
     <p><span style="font-family: Comfortaa, Verdana;"><br>
       </span> </p>
@@ -30,7 +45,8 @@
     </span>
     <ul>
       <li><span style="font-family: Comfortaa,Verdana;">1x USB Hub (I used one
-          from iBoost, but it is not on Amazon anymore. Choose a small flat one.)</span></li>
+          from iBoost, but it is not on Amazon anymore. Choose a small flat
+          one.)</span></li>
       <li><span style=" font-family: Comfortaa,Verdana;">1x Raspberry Pi Zero
           v1.3. I got mine from Adafruit. <br>
         </span></li>
@@ -57,8 +73,8 @@
           had a battery compartment, and made noises when it detected motion,
           like "Intruder Alert! You have entered a no-trespassing zone! Do not
           touch anything!"</span></li>
-      <li><span style="        font-family: Comfortaa,Verdana;">Assorted buttons.
-          These will be used to control the camera. <br>
+      <li><span style="        font-family: Comfortaa,Verdana;">Assorted
+          buttons. These will be used to control the camera. <br>
         </span></li>
       <li><span style="         font-family: Comfortaa,Verdana;">1x wifi dongle.
           I recommend <a href="https://www.amazon.com/LinkSprite-WiFi-Dongle-for-pcDuino/dp/B01MA0RRRG/">this
@@ -105,5 +121,6 @@
           style="font-family: serif;"></span></span></p>
     <p><span style="font-family: Comfortaa, Verdana;"></span></p>
     <span style="font-family: Comfortaa, Verdana;"> </span>
+    
   </body>
 </html>
