--- a/usbchuck.html
+++ b/usbchuck.html
@@ -4,17 +4,33 @@
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <title>USBChuck | codingkid.ninja</title>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+    <style>
+      h1 {
+        background-color: lightskyblue;
+        padding-bottom: 20px;
+        padding-top: 20px;
+        margin: 0;
+      }
+      h3 {
+        background-image: url("menubg.png");
+        padding-bottom: 7px;
+        padding-top: 7px;
+        margin: 0;
+      }
+      body {
+             background-image: url("bg.png");
+      }
+    </style>
   </head>
-  <body><span style="font-family: Comfortaa, Verdana;"> </span>
-    <p> </p>
-    <p> </p>
+  <body>
+
     <h1 style="    text-align: center;"><span style="font-family: Comfortaa, Verdana;">codingkid.ninja</span></h1>
     <span style="font-family: Comfortaa, Verdana;"> </span>
-    <p style="text-align: center;"><span style="font-family: Comfortaa, Verdana;"><a
+    <h3 style=" text-align: center;"><span style="font-family: Comfortaa, Verdana;"><a
           href="index.html">Home</a> | <a href="stuff.html">Stuff</a> | <a href="https://github.com/Merlin04">Github</a>
         | <a href="Hello%20World%21.html">Test page</a> | <a href="http://codingkid.weebly.com">Old
           site</a><br>
-      </span> </p>
+      </span> </h3>
     <span style="font-family: Comfortaa, Verdana;"> </span>
     <p><span style="font-family: Comfortaa, Verdana;"><br>
       </span> </p>
@@ -81,5 +97,6 @@
     </blockquote>
     <span style="font-family: Comfortaa, Verdana;"><br>
     </span>
+    
   </body>
 </html>
