--- a/stuff.html
+++ b/stuff.html
@@ -4,16 +4,31 @@
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <title>Stuff | codingkid.ninja</title>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+    <style>
+      h1 {
+        background-color: lightskyblue;
+        padding-bottom: 20px;
+        padding-top: 20px;
+        margin: 0;
+      }
+      h3 {
+        background-image: url("menubg.png");
+        padding-bottom: 7px;
+        padding-top: 7px;
+        margin: 0;
+      }
+      body {
+             background-image: url("bg.png");
+      }
+    </style>
   </head>
   <body>
-    <p><span style="font-family: Comfortaa, Verdana;"> </span></p>
-    <p> </p>
     <h1 style="    text-align: center;"><span style="font-family: Comfortaa, Verdana;">codingkid.ninja</span></h1>
-    <p style="text-align: center;"><span style="font-family: Comfortaa, Verdana;"><a
+    <h3 style=" text-align: center;"><span style="font-family: Comfortaa, Verdana;"><a
           href="index.html">Home</a> | Stuff | <a href="https://github.com/Merlin04">Github</a>
         | <a href="Hello%20World%21.html">Test page</a></span><span style="font-family: Comfortaa, Verdana;">
       </span><span style="font-family: Comfortaa, Verdana;">| <a href="http://codingkid.weebly.com">Old
-          site</a></span></p>
+          site</a></span></h3>
     <span style="font-family: Comfortaa, Verdana;"> </span>
     <p><span style="font-family: Comfortaa, Verdana;"><br>
       </span> </p>
