Finally, code boxes!

--- a/usbchuck.html
+++ b/usbchuck.html
@@ -23,7 +23,6 @@
     </style>
   </head>
   <body>
-
     <h1 style="    text-align: center;"><span style="font-family: Comfortaa, Verdana;">codingkid.ninja</span></h1>
     <span style="font-family: Comfortaa, Verdana;"> </span>
     <h3 style=" text-align: center;"><span style="font-family: Comfortaa, Verdana;"><a
@@ -91,12 +90,10 @@
       I have been modifing the iTapStick code from Adafruit. So far I have made
       the mouse easier to control, and added click-and-drag. Soon, I will add
       basic acceleration. Here is my modified code:<br>
+    </span> <iframe src="code/itapstick-ino.html" height="400" width="700">Your
+      browser doesn't support iframes, which is odd. </iframe> <iframe src="code/wiinunchuk-h.html"
+      height="400" width="700">Your browser doesn't support iframes, which is
+      odd. </iframe> <span style="font-family: Comfortaa, Verdana;"><br>
     </span>
-    <blockquote>I'm still working on finding a code box to put the code in. :-(<br>
-      If you know of one, please answer my Stack Exchange question <a href="http://softwarerecs.stackexchange.com/questions/38194/a-code-box-for-html">here</a>.
-    </blockquote>
-    <span style="font-family: Comfortaa, Verdana;"><br>
-    </span>
-    
   </body>
 </html>
