Make home page look better

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
-    <title>Main | codingkid.ninja</title>
+    <title>Home | codingkid.ninja</title>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <style>
       h1 {
@@ -34,8 +34,18 @@
     </span>
     <p><span style="font-family: Comfortaa, Verdana;"><br>
         This is a work in progress site to replace <a href="http://codingkid.weebly.com">codingkid.weebly.com</a>.
+        <br>
       </span></p>
-    <br>
+    <p><span style="font-family: Comfortaa, Verdana;">codingkid.ninja is a
+        website about my code and projects. <br>
+      </span></p>
+    <p><span style="font-family: Comfortaa, Verdana;"><br>
+      </span></p>
+    <span style="font-family: Comfortaa, Verdana;"></span><span style="font-family: Comfortaa, Verdana;"></span>
+    <iframe src="home-iframes/activity.html" height="440" width="300">Your
+      browser doesn't support iframes. Please upgrade from IE4.</iframe> 
+    <iframe src="home-iframes/portal.html" height="440" width="520">
+      Your browser doesn't support iframes. Please upgrade from IE4.</iframe>
     <p><span style="font-family: Comfortaa, Verdana;"></span></p>
     <span style="font-family: Comfortaa, Verdana;"> </span>
   </body>
