I've lost track of how many times I've made this mistake.

--- a/home-iframes/portal.html
+++ b/home-iframes/portal.html
@@ -24,7 +24,7 @@
     <img style="height: 142px;" 
          title="Sparkfun" 
          alt="Sparkfun Logo" 
-         src="file:///home/benjamin/codingkid-bluegriffon/home-iframes/portal-img/sparkfun-logo.png">
+         src="portal-img/sparkfun-logo.png">
     </a>
     <a href="https://www.adafruit.com/">
       <img style="width: 368px; height: 142px;" 
