Cows go moo, awesome businesses go MOO.com

--- a/index.html
+++ b/index.html
@@ -37,15 +37,18 @@
         <br>
       </span></p>
     <p><span style="font-family: Comfortaa, Verdana;">codingkid.ninja is a
-        website about my code and projects. <br>
-      </span></p>
-    <p><span style="font-family: Comfortaa, Verdana;"><br>
-      </span></p>
+        website about my code and projects. </span></p>
+    <p><span style="font-family: Comfortaa, Verdana;">Looking for some great
+        business cards? I recommend MOO. Use my code and get $15 off, which
+        prices a pack of cards at $5!: https://refer.moo.com/s/et2sw</span></p>
+    <p><span style="font-family: Comfortaa, Verdana;">This is not a paid advertisement,
+        although I get $15 off too!</span><br>
+    </p>
     <span style="font-family: Comfortaa, Verdana;"></span><span style="font-family: Comfortaa, Verdana;"></span>
     <iframe src="home-iframes/activity.html" height="440" width="300">Your
-      browser doesn't support iframes. Please upgrade from IE4.</iframe> 
-    <iframe src="home-iframes/portal.html" height="440" width="520">
-      Your browser doesn't support iframes. Please upgrade from IE4.</iframe>
+      browser doesn't support iframes. Please upgrade from IE4.</iframe> <iframe
+      src="home-iframes/portal.html" height="440" width="520"> Your browser
+      doesn't support iframes. Please upgrade from IE4.</iframe>
     <p><span style="font-family: Comfortaa, Verdana;"></span></p>
     <span style="font-family: Comfortaa, Verdana;"> </span>
   </body>
