Sorry, challenge over.
But you can get a pack of business cards for $5, which is even better than my challenge.

--- a/home-iframes/activity.html
+++ b/home-iframes/activity.html
@@ -7,28 +7,12 @@
   </head>
   <body><span style="font-family: Comfortaa, Verdana;"> </span>
     <h2><span style="font-family: Comfortaa, Verdana;">Updates</span></h2>
-    <p><span style="font-family: Comfortaa, Verdana;">I have a challenge for you!
-        My email address is encrypted below:</span></p>
-    <p><span style="font-family: Comfortaa, Verdana;">User Product received You
-        a consequence you a System Library need to USE an aggregate Conveying
-        occurs in future versions Some of Sections and PERFORMANCE OF a Standard
-        defined by a computer or OTHER charge any covered by court order
-        agreement or AGREED TO USE propagate or IMPLIED INCLUDING ANY applicable
-        to March Nothing in any OTHER defenses to accept this definition control
-        copyright also convey it applies to USE propagate modify any further
-        charge c Convey or DATA communication across the IMPLIED WARRANTIES OF
-        Others' Freedom If SUCH circumvention of DATA OR THIRD PARTIES to USE
-        pieces of charge for and FITNESS FOR and all notices c Convey or FITNESS
-        FOR and authors' protection the Free patent or access to USE propagate
-        covered works for as changed so exclusively for Having Copies made If it
-        applies to OPERATE WITH facilities for and all notices to YOU a
-        PARTICULAR programming language one that arrangement you additional
-        Terms permissive terms reviewing courts shall apply and PERFORMANCE OF
-        MERCHANTABILITY or A<br>
-      </span></p>
-    <p><span style="font-family: Comfortaa, Verdana;">Try to decrypt it, and send
-        me an email when you do! I will help you with your code. Hint: I used
-        asemica. (Published on 1-29-17)<br>
+    <p><span style="font-family: Comfortaa, Verdana;">I have a challenge for
+        you! My email address is encrypted below:</span></p>
+    Contest over, sorry. <br>
+    <p><span style="font-family: Comfortaa, Verdana;">Try to decrypt it, and
+        send me an email when you do! I will help you with your code. Hint: I
+        used asemica. (Published on 1-29-17)<br>
       </span></p>
     <p><span style="font-family: Comfortaa, Verdana;"></span></p>
     <hr>
