Cows go moo, great businesses go MOO.com!
... and forgetful Merlin04s don't add a hyperlink.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         website about my code and projects. </span></p>
     <p><span style="font-family: Comfortaa, Verdana;">Looking for some great
         business cards? I recommend MOO. Use my code and get $15 off, which
-        prices a pack of cards at $5!: https://refer.moo.com/s/et2sw</span></p>
+        prices a pack of cards at $5!: <a href="https://refer.moo.com/s/et2sw">https://refer.moo.com/s/et2sw</a></span></p>
     <p><span style="font-family: Comfortaa, Verdana;">This is not a paid advertisement,
         although I get $15 off too!</span><br>
     </p>
